# checkers-ai

./: .gitignore  README.md  checkers-gui.py  deps.txt  makefile  move-gen.py  move-generator.py  move-table.json  move_generator.cpp  move_generator.py
board/: board.py  checker.py  player.py  space.py
board/cy_board/: board  board.c  board.pyx  checker.c  checker.pyx  move_generator.c  player.c  player.pyx  setup.py  setup.sh  space.c  space.pyx
board/py_board/: board.py  player.py
c++to-python/: get-boost.py
checkers-ai/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  board.cpp  build.sh  checkers-game.cpp  checkers_game.pxd  checkers_game.pyx  createNewNetworks.cpp  docker-tournament.cfg  fast-build.sh  firstmove.sh  game-state.cpp  gui-cpp-files.txt  gui-cpp-interface.cpp  gui-install.sh  gui.py  install.sh  json-to-stl.cpp  log-parse.py  log.txt  log_parse.py  main.cpp  makefile  min_max.cpp  minimax.cpp  move-generator.cpp  move-table.json  network-file-io.cpp  network-file-reader.cpp  network-file-writer.cpp  network.cpp  networkManagement.cpp  networkmain.cpp  piece-count-test.py  player.cpp  requirements.txt  run-8-containers.py  search.cpp  (+9 more)
checkers-ai/cy_director/: director.pxd  director.pyx  director_obj.cpp
checkers-ai/headers/: board.h  checkers-game.h  checkers_skynet_interface.h  consts.h  game-state.h  get-checkers-game.h  gui-cpp-interface.h  json-to-stl.h  min_max.h  minimax.h  models.h  move-generator.h  network-file-io.h  network.h  player.h  search.h  seeder.h  table-types.h  utils.h
checkers-ai/helper/: __init__.py  checking.py  conversions.py  game_parser.py  writer.py
checkers-ai/local-nets/TestingNetworks/: readme.txt
checkers-ai/local-nets/hadimarchi/: generations.cfg
checkers-ai/logs/: board_parse.py  tournament.json
checkers-ai/networks/Duane/: 0.network  1.network  11.network  12.network  13.network  14.network  15.network  16.network  17.network  2.network  21.network  22.network  23.network  26.network  27.network  29.network  3.network  4.network  5.network  6.network  7.network  8.network  generations.cfg
checkers-ai/networks/Duane - Copy/: 0.network  1.network  18.network  2.network  21.network  24.network  28.network  29.network  3.network  4.network  5.network  6.network  7.network  8.network
checkers-ai/networks/Duane - Copy (2)/: 0.network  12.network  13.network  15.network  18.network  19.network  2.network  22.network  24.network  25.network  26.network  3.network  4.network  5.network  6.network  7.network  8.network  9.network
checkers-ai/networks/ThisFolderShouldntWork/: generations.cfg
checkers-ai/networks/hadimarchi/: generations.cfg
checkers-ai/networks/test/: 0.network  1.network  10.network  11.network  12.network  13.network  15.network  16.network  17.network  18.network  19.network  2.network  20.network  21.network  22.network  23.network  24.network  25.network  26.network  27.network  29.network  3.network  4.network  5.network  6.network  7.network  8.network  9.network
checkers-ai/networks/william/: generations.cfg
checkers-ai/networks/williamh/: generations.cfg
checkers-ai/pyintheskynet/: skynet.py
checkers-ai/src/: board.cpp  checkers-game.cpp  checkers_skynet_interface.cpp  game-state.cpp  get-checkers-game.cpp  gui-cpp-interface.cpp  json-to-stl.cpp  main.cpp  minimax.cpp  move-generator.cpp  network-file-reader.cpp  network-file-writer.cpp  network.cpp  networkManagement.cpp  player.cpp  search.cpp  seeder.cpp  skynet-game.cpp  utils.cpp
checkers-ai/tests/: test-minimax.cpp  test-move-generator.cpp  test-network.cpp  test-search.cpp  test-utils.cpp  test_min_max.cpp
checkers-ai/tournament/: .gitignore  children.py  director.pxd  director.py  director.pyx  docker-run.sh  example_config.cfg  logger.py  network_git.py  options.py  output.txt  setup.py  setup.sh  tournament.cfg  utils.py
games/: destruction.game  piece-count-issue.game
generator/: .gitignore  0.network  1.network  board.cpp  bug.txt  checkers-game.cpp  checkers_game.pxd  checkers_game.pyx  checkers_game_obj  checkers_game_obj.cpp  checkers_game_obj_2  copy_checkers_game.pyx  game.c  game.pyx  gui-checkers  gui-cpp-interface.cpp  gui.c  gui.py  gui.pyx  json-to-stl.cpp  main.cpp  makefile  move-generator.cpp  move-table.json  move_generator.cpp  move_generator.pyx  network-file-io.cpp  network-file-reader.cpp  network-file-writer.cpp  network.cpp  networkmain.cpp  player.cpp  seeder.cpp  setup.py  setup.sh  table-types.h  utils.cpp
generator/headers/: board.h  checkers-game.h  consts.h  gui-cpp-interface.h  gui-interface.h  json-to-stl.h  jump.h  models.h  move-generator.h  network-file-io.h  network.h  player.h  seeder.h  table-types.h  utils.h
generator/helper/: game_parser.py  reader.py
generator/networks/: 0.network
generator/tests/: test-json-to-stl.cpp  test-move-generator.cpp  test-netork-file-io.cpp  test-network.cpp  test-player.cpp  test-utils.cpp  test.json
gui/: checkers-gui.py
paper/: data.csv  make.sh  term-paper.tex
paper/code/: network.cpp  search.cpp
